--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Protfolio Of Zarif</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <section class="top">
+        <div class="width">
+            <h1>Welcome <small>To </small> </h1>
+            <h1><span class="color">Iron Man's</span> World !</h1>
+            <h4>The Core Thought Of Web Developer</h4>
+            <P>“Your website is the center of your digital eco-system, like a brick and mortar location, the
+                experience matters once a customer enters, just as much as the perception they have of you before they
+                walk
+                through the door.”</P>
+            <a class="link-button" target="blank"
+                href="https://www.linkedin.com/in/mehedi-hasan-emon-0a2413241/">Contact With Me</a>
+        </div>
+        <div class="width">
+            <img src="images/my bg.png" alt="">
+        </div>
+    </section>
+
 </body>
+
 </html>
