--- a/index.html
+++ b/index.html
@@ -22,11 +22,27 @@
                 experience matters once a customer enters, just as much as the perception they have of you before they
                 walk
                 through the door.”</P>
-            <a class="link-button" target="blank"
+            <a class="link-button" target="_blank"
                 href="https://www.linkedin.com/in/mehedi-hasan-emon-0a2413241/">Contact With Me</a>
         </div>
         <div class="width">
             <img src="images/my bg.png" alt="">
+        </div>
+    </section>
+
+    <section class="second">
+        <div class="width">
+            <img src="images/my-bg.png" alt="">
+        </div>
+        <div class="width">
+            <h2>Dream BIG</h2>
+            <h3>Become A Developer</h3>
+            <p>As a young child, my dream occupation was to dig up dinosaurs. As I grew older and my interests changed,
+                my dream profession changed also. Although most of these dreams were not very long lived, one
+                occupational dream has outlasted all others, and has finally emerged as the dream I passionately pursue.
+                <a class="link-button" target="_blank"
+                    href="https://www.linkedin.com/in/mehedi-hasan-emon-0a2413241/">Clicl Here</a>
+            </p>
         </div>
     </section>
 
